Gallery: ensure there are no horizontal scroll bars

--- a/gallery/css/styles.css
+++ b/gallery/css/styles.css
@@ -1,6 +1,7 @@
 #gallery {
 	margin-top: 2.8em;
 	overflow: auto;
+	overflow-x: hidden;
 	text-align: justify;
 }
 
